@@ -5232,16 +5232,19 @@ sub saw_sources_p
 {
     my ($headers) = @_;
 
-    if ($headers)
+    # count all the sources
+    my $count = 0;
+    foreach my $val (values %extension_seen) 
     {
-	$headers = 0;
-    }
-    else
-    {
-	$headers = count_files_for_language ('header');
+	$count += $val;
     }
 
-    return scalar keys %extension_seen > $headers;
+    if (!$headers) 
+    {
+	$count -= count_files_for_language ('header');
+    }
+
+    return $count > 0;
 }
 
 
